syntax = "proto3";

option csharp_namespace = "GRPCService";
import "user.proto";


service BlockProto{
  rpc BlockUser(BlockObj) returns (user.UserObj);
  rpc UnBlockUser(user.Username) returns (user.UserObj);
  rpc getAllBlockedUsers(EmptyBlock ) returns  (ListOfBlocks);

}

message BlockObj{
  string username =1;
  string reason =2;
}
message ListOfBlocks{
  repeated BlockObj allBlocks =1;
}
message EmptyBlock{

}
